# openai-macro

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  test-ollama.sh  test.sh
crates/llimp/: Cargo.toml
crates/llimp/src/: lib.rs
crates/openai-impl/: Cargo.toml
crates/openai-impl/src/: lib.rs
crates/openai-macro/: Cargo.toml
crates/openai-macro-impl/: Cargo.toml
crates/openai-macro-impl/src/: lib.rs
crates/openai-macro/src/: lib.rs
examples/abuse/: Cargo.toml
examples/abuse/src/: lib.rs
examples/calculator/: Cargo.toml
examples/calculator/src/: lib.rs  main.rs
examples/ollama/: Cargo.toml  README.md
examples/ollama/src/: main.rs
