[package]
name = "llimp"
version = "0.1.0"
edition = "2021"
description = "A proc macro that generates Rust code using LLMs (Large Language Models)"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[features]
# opt-in safety to avoid network during CI
no-network = []

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
